argo-events/overlays/production/argo-events-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-events-gateway
  namespace: argo-evevnts
  annotations: {}
    #external-dns.alpha.kubernetes.io/hostname: "*.kubefrog.fr"
    #external-dns.alpha.kubernetes.io/target: "172.22.80.100"
    #external-dns.alpha.kubernetes.io/target: "176.185.193.54"
    #external-dns.alpha.kubernetes.io/ttl: "120"
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"  
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
      - webhook-gh.kubefrog.fr
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
        httpsRedirect: true
  - hosts:
      - webhook-gh.kubefrog.fr
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs-kubefrog
