argo-events/overlays/production/event-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: argo-events-allow-ingress
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
      - operation:
          hosts:
          - webhook-gh.kubefrog.fr
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: event-access
  namespace: argo-events
spec:
  action: ALLOW
  rules:
  - {}
